--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -18,7 +18,7 @@
     <link href="/storage/static/lib/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Application CSS -->
-    <link href="/storage/compiled/style.css" rel="stylesheet" type="text/css">
+    <link href="/storage/compiled/style.css?version={{cache_buster}}" rel="stylesheet" type="text/css">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
 
