--- a/resources/templates/pages/whitepaper.html
+++ b/resources/templates/pages/whitepaper.html
@@ -23,7 +23,7 @@
                     <div class="col-sm-4">
                         <h2 class="whitepaper-header" style="text-align: center;">Overview</h2>
                     </div>
-                    <div class="col-sm-5">
+                    <div class="col-sm-6">
                         <p class="align-left whitepaper-text whitepaper-overview">
                             SafeGalaxy works by taking a 10% fee on every transaction. That fee is broken up into 2 parts.
 
@@ -32,6 +32,8 @@
                             LP Generation - 25% of the fee (2.5% of the transaction) collected in SafeGalaxy is sold into BNB. That BNB is married up with the remaining 25% of SafeGalaxy and deposited back into the PancakeSwap liquidity pool.
 
                             These two functions work together to reward holders and punish whales.
+                        </p>
+                        <p class="align-left whitepaper-text whitepaper-overview">
 
                             Wait!
 
@@ -83,7 +85,7 @@
                         400,000,000,000,000
                     </div>
                     <div class="col align-right whitepaper-header">
-                        Reserve
+                        Marketing
                     </div>
                     <div class="col align-left whitepaper-text">
                         100,000,000,000,000
