tweaks to navbar

--- a/resources/templates/components/navbar.html
+++ b/resources/templates/components/navbar.html
@@ -73,7 +73,7 @@
             <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-Emblem-white.png" width="100px" height="85px" class="center-items"></div>
             <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm">
                 {% if path == "/" %}
-                    <a href="#road-map">ROAD MAP</a>
+                    <a href="/whitepaper">WHITEPAPER</a>
                 {% elif path == "/how-to-buy" %}
                     <a href="/jobs">JOBS</a>
                 {% else %}
@@ -103,7 +103,7 @@
                 </li>
                 <li class="nav-item">
                     {% if path == "/" %}
-                        <a href="#road-map">ROAD MAP</a>
+                        <a href="/whitepaper">WHITEPAPER</a>
                     {% else %}
                         <a target="_blank" href="https://drive.google.com/file/d/18GX3LdXNY5IyYbRtucb0xooE3St7xXdS/view">ROAD MAP</a>
                     {% endif %}
