job page, live chart link and footer

--- a/resources/templates/components/footer.html
+++ b/resources/templates/components/footer.html
@@ -4,80 +4,135 @@
 </div>
 
 <div class="position-ref">
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="content">
-            <div class="row">
-                <div class="col-sm-12">
-                    <img src="/storage/static/images/SafeGalaxy-Logo-white.png" width="350px" height="50px" class="center-items">
-                </div>
-<!--                 <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Money-bag-emoji.png" width="75px" height="75px" class="center-items">
-                            <h1 class="font-text-bold sub-header-main">10,000,000.00 USD</h1>
-                            <h2 class="font-text sub-header-main-sm">Liquidity Generated</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Cap-emoji.png" width="75px" height="75px" class="center-items">
-                            <h1 class="font-text-bold sub-header-main">500 M</h1>
-                            <h2 class="font-text sub-header-main-sm">Market Cap</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Fire-emoji.png" width="75px" height="75px" class="center-items">
-                            <h1 class="font-text-bold sub-header-main">500.000 T</h1>
-                            <h2 class="font-text sub-header-main-sm">Tokens Burned</h2>
-                        </div>
-                    </div>
-                </div> -->
+    <br>
+    <br>
+    <div class="content footer-container">
+        <div class="row">
+            <div class="col-sm-12">
+                <img src="/storage/static/images/SafeGalaxy-Logo-white.png" width="350px" height="50px" class="center-items footer-logo">
             </div>
-            <div class="row">
-
-            </div>
-            <br>
-            <br>
-                <div class="row">
-                    <div class="col-lg">
-                        <img src="/storage/static/images/Discord.png" width="50px" height="50px" class="social-bottom" usemap="#discord_map">
-                        <map name="discord_map">
-                            <area shape="circle" coords="25,25,25" alt="SafeGalaxy Discord" target="_blank" href="https://discord.com/invite/dq7m6R7UAz">
-                        </map>
-
-                        <img src="/storage/static/images/Telegram.png" width="50px" height="50px" class="social-bottom" usemap="#telegram_map">
-                        <map name="telegram_map">
-                            <area shape="circle" coords="25,25,25" alt="SafeGalaxy Telegram" target="_blank" href="https://t.me/safegalaxychat">
-                        </map>
-
-                        <img src="/storage/static/images/Twitter.png" width="50px" height="50px" class="social-bottom" usemap="#twitter_map">
-                        <map name="twitter_map">
-                            <area shape="circle" coords="25,25,25" alt="SafeGalaxy Twitter" target="_blank" href="https://twitter.com/SafeGalaxyToken">
-                        </map>
-
-                        <img src="/storage/static/images/FaceBook.png" width="50px" height="50px" class="social-bottom" usemap="#facebook_map">
-                        <map name="facebook_map">
-                            <area shape="circle" coords="25,25,25" alt="SafeGalaxy Facebook" target="_blank" href="https://facebook.com/SafeGalaxyToken">
-                        </map>
-
-                        <img src="/storage/static/images/Instagram.png" width="50px" height="50px" class="social-bottom" usemap="#instagram_map">
-                        <map name="instagram_map">
-                            <area shape="circle" coords="25,25,25" alt="SafeGalaxy Instagram" target="_blank" href="https://www.instagram.com/safegalaxytoken/?igshid=jr936k6emyet">
-                        </map>
-
-                        <img src="/storage/static/images/Reddit.png" width="50px" height="50px" class="social-bottom" usemap="#reddit_map">
-                        <map name="reddit_map">
-                            <area shape="circle" coords="25,25,25" alt="SafeGalaxy Reddit" target="_blank" href="https://www.reddit.com/r/SafeGalaxy">
-                        </map>
-
-                        <img src="/storage/static/images/Tiktok.png" width="50px" height="50px" class="social-bottom" usemap="#tiktok_map">
-                        <map name="tiktok_map">
-                            <area shape="circle" coords="25,25,25" alt="SafeGalaxy Tiktok" target="_blank" href="https://vm.tiktok.com/ZSJ6ghm4k/">
-                        </map>
-                    </div>
+        </div>
+        <br>
+        <br>
+        <!-- mobile foot nav -->
+        <div class="row my-3 footer-mobile">
+            <!-- Row 1 -->
+            <div class="col-12 footer-header-mobile">Developers</div>
+            <div class="col-4 "><a href="/whitepaper">Whitepaper</a></div>
+            <div class="col-4"><a href="/how-to-buy">How to buy</a></div>
+            <div class="col-4"><a target="_blank" href="https://drive.google.com/file/d/1tgtvtvQHxaDjoqSVO7N7lf8K9TK2E-_A/view?usp=sharing">Branding</a></div>
+        </div>
+        <div class="row my-3 footer-mobile">
+            <!-- Row 2 -->
+            <div class="col-12 footer-header-mobile">About</div>
+            <div class="col-6"><a href="/team">Meet the team</a></div>
+            <div class="col-6"><a href="/jobs">Jobs</a></div>
+        </div>
+        <div class="row my-3 footer-mobile">
+            <!-- Row 3 -->
+            <div class="col-12 footer-header-mobile">Community</div>
+            <div class="col-6"><a target="_blank" href="https://discord.com/invite/dq7m6R7UAz">Discord</a></div>
+            <div class="col-6"><a target="_blank" href="https://www.instagram.com/safegalaxytoken/?igshid=jr936k6emyet">Instagram</a></div>
+            <div class="col-6"><a target="_blank" href="https://drive.google.com/file/d/1tgtvtvQHxaDjoqSVO7N7lf8K9TK2E-_A/view?usp=sharing">Branding</a></div>
+            <div class="col-6"><a target="_blank" href="https://t.me/safegalaxychat">Telegram</a></div>
+        </div>
+        <!-- non mobile foot nav -->
+        <div class="row row-cols-3 footer">
+                <!-- Row 1 -->
+                <div class="col-sm-3 mx-3 my-1 footer-header ">
+                    Developers
+                </div>
+                <div class="col-sm-3 mx-4 my-1 footer-header ">
+                    About
+                </div>
+                <div class="col-sm-3 mx-4 my-1 footer-header ">
+                    Community
+                </div>
+                <!-- Row 2 -->
+                <div class="col-sm-3 mx-3">
+                    <a href="/whitepaper">Whitepaper</a>
+                </div>
+                <div class="col-sm-3 mx-4">
+                    <a href="/team">Meet the team</a>
+                </div>
+                <div class="col-sm-3 mx-4">
+                    <a target="_blank" href="https://discord.com/invite/dq7m6R7UAz">Discord</a>
+                </div>
+                <!-- Row 3 -->
+                <div class="col-sm-3 mx-3">
+                    <a href="/how-to-buy">How to buy</a>
+                </div>
+                <div class="col-sm-3 mx-4">
+                    <a href="/jobs">Jobs</a>
+                </div>
+                <div class="col-sm-3 mx-4">
+                    <a target="_blank" href="https://www.instagram.com/safegalaxytoken/?igshid=jr936k6emyet">Instagram</a>
+                </div>
+                <!-- Row 4 -->
+                <div class="col-sm-3 mx-3">
+                    <a target="_blank" href="https://drive.google.com/file/d/1tgtvtvQHxaDjoqSVO7N7lf8K9TK2E-_A/view?usp=sharing">Branding</a>
+                </div>
+                <div class="col-sm-3 mx-4">
+                </div>
+                <div class="col-sm-3 mx-4">
+                    <a target="_blank" href="https://twitter.com/SafeGalaxyToken">Twitter</a>
+                </div>
+                <!-- Row 5 -->
+                <div class="col-sm-3 mx-3">
+                    <a href=""></a>
+                </div>
+                <div class="col-sm-3 mx-4">
+                </div>
+                <div class="col-sm-3 mx-4">
+                    <a target="_blank" href="https://t.me/safegalaxychat">Telegram</a>
                 </div>
         </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-lg">
+                <img src="/storage/static/images/Discord.png" width="50px" height="50px" class="social-bottom" usemap="#discord_map">
+                <map name="discord_map">
+                    <area shape="circle" coords="25,25,25" alt="SafeGalaxy Discord" target="_blank" href="https://discord.com/invite/dq7m6R7UAz">
+                </map>
+
+                <img src="/storage/static/images/Telegram.png" width="50px" height="50px" class="social-bottom" usemap="#telegram_map">
+                <map name="telegram_map">
+                    <area shape="circle" coords="25,25,25" alt="SafeGalaxy Telegram" target="_blank" href="https://t.me/safegalaxychat">
+                </map>
+
+                <img src="/storage/static/images/Twitter.png" width="50px" height="50px" class="social-bottom" usemap="#twitter_map">
+                <map name="twitter_map">
+                    <area shape="circle" coords="25,25,25" alt="SafeGalaxy Twitter" target="_blank" href="https://twitter.com/SafeGalaxyToken">
+                </map>
+
+                <img src="/storage/static/images/FaceBook.png" width="50px" height="50px" class="social-bottom" usemap="#facebook_map">
+                <map name="facebook_map">
+                    <area shape="circle" coords="25,25,25" alt="SafeGalaxy Facebook" target="_blank" href="https://facebook.com/SafeGalaxyToken">
+                </map>
+
+                <img src="/storage/static/images/Instagram.png" width="50px" height="50px" class="social-bottom" usemap="#instagram_map">
+                <map name="instagram_map">
+                    <area shape="circle" coords="25,25,25" alt="SafeGalaxy Instagram" target="_blank" href="https://www.instagram.com/safegalaxytoken/?igshid=jr936k6emyet">
+                </map>
+
+                <img src="/storage/static/images/Reddit.png" width="50px" height="50px" class="social-bottom" usemap="#reddit_map">
+                <map name="reddit_map">
+                    <area shape="circle" coords="25,25,25" alt="SafeGalaxy Reddit" target="_blank" href="https://www.reddit.com/r/SafeGalaxy">
+                </map>
+
+                <img src="/storage/static/images/Tiktok.png" width="50px" height="50px" class="social-bottom" usemap="#tiktok_map">
+                <map name="tiktok_map">
+                    <area shape="circle" coords="25,25,25" alt="SafeGalaxy Tiktok" target="_blank" href="https://vm.tiktok.com/ZSJ6ghm4k/">
+                </map>
+            </div>
+        </div>
+
+        <br>
+        <div class="row">
+            <div class="col-lg">
+                &#169; {{ year }} SafeGalaxy | All Rights Reserved.
+            </div>
+        </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
+</div>
