--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -36,6 +36,36 @@
 
         <div class="content">
             <div class="row">
+                <div class="col-sm-12">
+                    <button class="how-to-buy font-text-bold main-page-buttons m-2">
+                        <a target="_blank" href="https://dex.guru/token/0x6b51231c43b1604815313801db5e9e614914d6e4-bsc">Live Chart</a>
+                    </button>
+                </div>
+<!--                 <div class="col-sm-3 my-2"><img src="/storage/static/images/Heart-emoji.png" width="75px" height="75px" class="center-items">
+                    <h1 class="font-text-bold sub-header-main">18K+</h1>
+                    <h2 class="font-text sub-header-main-sm">Holders</h2>
+                </div>
+                <div class="col-sm-3 my-2"><img src="/storage/static/images/Money-bag-emoji.png" width="75px" height="75px" class="center-items">
+                    <h1 class="font-text-bold sub-header-main">$1.8M USD</h1>
+                    <h2 class="font-text sub-header-main-sm">Liquidity Generated</h2>
+                </div>
+                <div class="col-sm-3 my-2"><img src="/storage/static/images/Cap-emoji.png" width="75px" height="75px" class="center-items">
+                    <h1 class="font-text-bold sub-header-main">$29.5M USD</h1>
+                    <h2 class="font-text sub-header-main-sm">Market Cap</h2>
+                </div>
+                <div class="col-sm-3 my-2"><img src="/storage/static/images/Fire-emoji.png" width="75px" height="75px" class="center-items">
+                    <h1 class="font-text-bold sub-header-main">353 T</h1>
+                    <h2 class="font-text sub-header-main-sm">Tokens Burned</h2>
+                </div> -->
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="position-ref">
+
+        <div class="content">
+            <div class="row">
                 <div class="col-sm-3 my-2"><img src="/storage/static/images/Heart-emoji.png" width="75px" height="75px" class="center-items">
                     <h1 class="font-text-bold sub-header-main">18K+</h1>
                     <h2 class="font-text sub-header-main-sm">Holders</h2>
@@ -52,6 +82,7 @@
                     <h1 class="font-text-bold sub-header-main">353 T</h1>
                     <h2 class="font-text sub-header-main-sm">Tokens Burned</h2>
                 </div>
+            </div>
         </div>
     </div>
     <br>
