--- a/resources/templates/pages/how_to_buy.html
+++ b/resources/templates/pages/how_to_buy.html
@@ -8,7 +8,7 @@
     <div class="position-ref  top-background">
         {% include "/components/navbar.html" %}
 
-        <div class="content container-sm">
+        <div class="content container-sm how-to-buy-container">
             <div class="row">
                 <div class="col-sm-12">
                     <h1 class="font-text-bold header-main">How to buy SafeGalaxy</h1>
