--- a/resources/templates/pages/whitepaper.html
+++ b/resources/templates/pages/whitepaper.html
@@ -94,6 +94,11 @@
         </div>
         <br>
         <br>
+<!--         <div class="content">
+            <div class="container-fluid">
+                <img src="/storage/static/images/Presale-detail-dots.png" class="center-items" width="100%">
+            </div>
+        </div> -->
         <div class="content">
             <div class="container-fluid">
                 <picture>
