--- a/resources/templates/components/navbar.html
+++ b/resources/templates/components/navbar.html
@@ -1,11 +1,11 @@
 <div class="social">
-    <div class="row col-sm-12 col-md-10" style="margin:0 auto">
+    <div class="row col-sm-12 col-md-10 col-sm-8" style="margin:0 auto">
 
         <div class="col-8 desktop">
-            <h2 class="font-text social-navbar-sm">Contract Address: <span id="contract_address" class="font-text-bold social-navbar-main">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
+            <h2 class="font-text social-navbar-sm my-2">Contract Address: <span id="contract_address" class="font-text-bold social-navbar-main">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
                 <a class="clipboard_copy clipboard-copy-link" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
         </div>
-        <div class="col-12 col-md-4 header-icon">
+        <div class="col-12 col-lg-4 header-icon">
             <img src="/storage/static/images/Discord.png" width="20px" height="20px" class="social-navbar" usemap="#discord_social_map">
             <map name="discord_social_map">
                 <area shape="circle" coords="10,10,10" alt="SafeGalaxy Discord" target="_blank" href="https://discord.com/invite/dq7m6R7UAz">
@@ -44,8 +44,8 @@
     </div>
 </div>
 <span class="copied_message" style="color: #FF3BFF; display: none; justify-content: center;">Copied!</span>
-<div id="navbar" class="navbar navbar-expand-sm">
-    <div class="container-fluid">
+<div id="navbar" class="navbar navbar-expand-lg">
+    <div class="container-lg">
         <button
             class="navbar-toggler mobile"
             type="button"
@@ -60,7 +60,7 @@
         </button>
 
 
-        <div class="row col-10 desktop" style="margin:0 auto">
+        <div class="row col-12 desktop" style="margin:0 auto">
             <div class="col-lg">
                 <div class="row padding-15"><div class="col-8 col-sm"><a href="/">HOME</a></div></div></div>
             <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm">
