--- a/storage/static/sass/style.scss
+++ b/storage/static/sass/style.scss
@@ -26,6 +26,13 @@ html, body {
     margin: 0;
 }
 
+div {
+    color: #fff;
+    font-family: "Mosk";
+    font-weight: 500;
+    font-size: 16px;
+}
+
 a:hover {
     cursor:pointer;
 }
@@ -148,6 +155,86 @@ a:focus {
     text-decoration: none;
 }
 
+/* footer links */
+.footer a {
+    display: block;
+    color: #f2f2f2;
+    text-align: left;
+    padding: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.footer {
+    /*max-width: 650px;*/
+    margin: auto 0px 0px 20%;
+    padding: 20px;
+}
+
+@media (max-width: 992px) {
+
+
+    .footer {
+        /*max-width: 650px;*/
+        margin: auto 0px 0px 10%;
+        padding: 20px;
+    }
+}
+
+@media (min-width: 663px) {
+    .footer-mobile {
+        /*max-width: 650px;*/
+        display: none;
+    }
+
+}
+
+@media (max-width: 663px) {
+    .footer {
+        /*max-width: 650px;*/
+        display: none;
+    }
+
+    .footer-logo {
+        width: 250px;
+        height: 40px;
+    }
+}
+
+.footer-header {
+    color: #f2f2f2;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 800;
+    text-align: left;
+}
+
+.footer-header-mobile {
+    color: #f2f2f2;
+    font-size: 18px;
+    font-weight: 800;
+    text-align: center;
+
+}
+
+/* footer links */
+.footer-mobile a {
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.footer-container {
+    /*max-width: 850px;*/
+    margin: auto;
+
+}
+
 /* Page content */
 .content {
     padding: 16px;
@@ -173,7 +260,7 @@ a:focus {
     font-size: 16px;
 }
 
-.how-to-buy a{
+.how-to-buy a {
     padding: 5px !important;
 }
 
@@ -236,7 +323,7 @@ a:focus {
 }
 
 .social-navbar-sm {
-    font-size: 18px;
+    font-size: 0.85rem;
     color: #fff;
     font-weight: 100;
     margin-top: 0px;
@@ -245,7 +332,7 @@ a:focus {
 }
 
 .social-navbar-main {
-    font-size: 20px;
+    font-size: 0.85rem;
     color: #fff;
     margin-bottom: 0px;
 }
@@ -451,10 +538,76 @@ a:focus {
     font-size: 24px;
 }
 
+/*  Jobs Page */
+
+
+.job-img {
+    background-image: var(--url);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: relative;
+    width: 235px;
+    height: 375px;
+    margin: 20px auto 20px auto;
+}
+
+.job-title {
+    position: absolute;
+    top: 22%;
+    left: 0;
+    right: 0;
+    color: #000;
+    font-weight: 800;
+    font-family: 'Mosk Bold';
+    font-size: 22px;
+    width: 80%;
+    margin: auto;
+}
+
+.job-text {
+    position: absolute;
+    top: 38%;
+    left: 0;
+    right: 0;
+    color: #000;
+    font-weight: 700;
+    font-family: 'Mosk';
+    font-size: 14px;
+    width: 80%;
+    margin: auto;
+    text-align: left;
+}
+
+.job-btn {
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+    right: 0;
+    background-color: #FF3BFF;
+    border-color: #FF3BFF;
+    border-radius: 10px;
+    width: 175px;
+    height: 40px;
+    margin: auto;
+}
+
+.job-btn a {
+    color: #fff;
+    font-weight: 800;
+    font-family: 'Mosk Bold';
+    font-size: 16px;
+    text-decoration: none;
+
+}
+
 @media (min-width: 1200px) {
 
     .team-gutter-x {
         --bs-gutter-x: -12rem;
+    }
+
+    .how-to-buy-container {
+        max-width: 75%;
     }
 
 }
@@ -519,6 +672,23 @@ a:focus {
     }
     .desktop {
         display: none;
+    }
+}
+
+@media (max-width: 992px) {
+
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
+
+
+    .header-icon {
+        display:flex;
+        justify-content: center;
     }
 }
 
