--- a/storage/compiled/style.css
+++ b/storage/compiled/style.css
@@ -452,19 +452,19 @@ a:focus {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   position: relative;
-  width: 235px;
-  height: 375px;
+  width: 275px;
+  height: 425px;
   margin: 20px auto 20px auto; }
 
 .job-title {
   position: absolute;
-  top: 22%;
+  top: 24%;
   left: 0;
   right: 0;
   color: #000;
   font-weight: 800;
   font-family: 'Mosk Bold';
-  font-size: 22px;
+  font-size: 1.2rem;
   width: 80%;
   margin: auto; }
 
@@ -476,7 +476,7 @@ a:focus {
   color: #000;
   font-weight: 700;
   font-family: 'Mosk';
-  font-size: 14px;
+  font-size: 0.85rem;
   width: 80%;
   margin: auto;
   text-align: left; }
