--- a/storage/compiled/style.css
+++ b/storage/compiled/style.css
@@ -500,6 +500,15 @@ a:focus {
   font-size: 16px;
   text-decoration: none; }
 
+.stats-red {
+  color: red; }
+
+.stats-green {
+  color: green; }
+
+.stats-font {
+  font-size: 0.85rem; }
+
 @media (min-width: 1200px) {
   .team-gutter-x {
     --bs-gutter-x: -12rem; }
