fixes for prices

--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -66,19 +66,19 @@
         <div class="content">
             <div class="row">
                 <div class="col-sm-3 my-3"><img src="/storage/static/images/Heart-emoji.png" width="75px" height="75px" class="center-items">
-                    <h1 class="font-text-bold sub-header-main">{{ stats.holders }}+</h1>
+                    <h1 class="font-text-bold sub-header-main stats-font">{{ stats.holders }}+</h1>
                     <h2 class="font-text sub-header-main-sm">Holders</h2>
                 </div>
                 <div class="col-sm-3 my-3"><img src="/storage/static/images/Money-bag-emoji.png" width="75px" height="75px" class="center-items">
-                    <h1 class="font-text-bold sub-header-main">${{ stats.liquidity_generated }} USD</h1>
+                    <h1 class="font-text-bold sub-header-main stats-font">${{ stats.liquidity_generated }} USD</h1>
                     <h2 class="font-text sub-header-main-sm">Liquidity Generated</h2>
                 </div>
                 <div class="col-sm-3 my-3"><img src="/storage/static/images/Cap-emoji.png" width="75px" height="75px" class="center-items">
-                    <h1 class="font-text-bold sub-header-main">${{ stats.market_cap }} USD</h1>
+                    <h1 class="font-text-bold sub-header-main stats-font">${{ stats.market_cap }} USD</h1>
                     <h2 class="font-text sub-header-main-sm">Market Cap</h2>
                 </div>
                 <div class="col-sm-3 my-3"><img src="/storage/static/images/Fire-emoji.png" width="75px" height="75px" class="center-items">
-                    <h1 class="font-text-bold sub-header-main">{{ stats.tokens_burned }}</h1>
+                    <h1 class="font-text-bold sub-header-main stats-font">{{ stats.tokens_burned }}</h1>
                     <h2 class="font-text sub-header-main-sm">Tokens Burned</h2>
                 </div>
             </div>
