--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -59,6 +59,15 @@
             </div>
         </div>
     </div>
+    <div class="position-ref">
+        <div class="content">
+            <div class="row">
+                <div class="col-lg">
+                    Stats last updated {{ stats.timestamp_utc }}
+                </div>
+            </div>
+        </div>
+    </div>
     <br>
     <br>
     <div class="position-ref">
