cached price updates

--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -40,6 +40,7 @@
                         <a target="_blank" href="https://dex.guru/token/0x6b51231c43b1604815313801db5e9e614914d6e4-bsc">Live Chart</a>
                     </button>
                 </div>
+                <span>{{cached}}</span>
                 <div class="col-sm-3 my-3">
                     <h1 class="font-text-bold sub-header-main stats-font">${{ stats.current_price }} USD</h1>
                     <h2 class="font-text sub-header-main-sm">Current Price</h2>
