changes for sass compile updates to whitepaper over all css changes

--- a/resources/templates/components/navbar.html
+++ b/resources/templates/components/navbar.html
@@ -62,25 +62,23 @@
 
         <div class="row col-12 desktop" style="margin:0 auto">
             <div class="col-lg">
-                <div class="row padding-15"><div class="col-8 col-sm"><a href="/">HOME</a></div></div></div>
-            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm">
-                {% if path == "/team" %}
-                    <a href="/whitepaper">WHITEPAPER</a>
-                {% else %}
-                    <a href="/team">MEET OUR TEAM</a>
-                {% endif %}
+                <div class="row navbar-padding-15"><div class="col-8 col-sm"><a href="/">Home</a></div></div></div>
+            <div class="col-lg"><div class="row navbar-padding-15"><div class="col-8 col-sm">
+                <a href="/whitepaper">Whitepaper</a>
+            </div></div></div>
+            <div class="col-lg"><div class="row navbar-padding-15"><div class="col-8 col-sm">
+                <a href="/team">Meet our team</a>
             </div></div></div>
             <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-Emblem-white.png" width="100px" height="85px" class="center-items"></div>
-            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm">
-                {% if path == "/" %}
-                    <a href="/whitepaper">WHITEPAPER</a>
-                {% elif path == "/how-to-buy" %}
-                    <a href="/jobs">JOBS</a>
-                {% else %}
-                    <a href="/how-to-buy">HOW TO BUY</a>
-                {% endif %}
+            <div class="col-lg"><div class="row navbar-padding-15"><div class="col-8 col-sm">
+                <a href="https://drive.google.com/file/d/1tgtvtvQHxaDjoqSVO7N7lf8K9TK2E-_A/view?usp=sharing" target="_blank">Branding</a>
             </div></div></div>
-            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><button class="how-to-buy center-items font-text-bold"><a target="_blank" href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x6b51231c43B1604815313801dB5E9E614914d6e4">WHERE TO BUY</a></button></div></div></div>
+            <div class="col-lg"><div class="row navbar-padding-15"><div class="col-8 col-sm">
+                <a href="/jobs">Jobs</a>
+            </div></div></div>
+            <div class="col-lg"><div class="row navbar-padding-15"><div class="col-8 col-sm">
+                <a href="/how-to-buy">How to buy</a>
+            </div></div></div>
         </div>
     </div>
 
@@ -90,27 +88,24 @@
         <div class="navbar-collapse" id="navbarSupportedContent">
             <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-Emblem-white.png" width="100px" height="85px" class="center-items"></div>
 
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-lg-0 my-5">
                 <li class="nav-item">
-                    <a href="/">HOME</a>
+                    <a href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    {% if path == "/team" %}
-                        <a href="/whitepaper">WHITEPAPER</a>
-                    {% else %}
-                        <a href="/team">MEET OUR TEAM</a>
-                    {% endif %}
+                    <a href="/whitepaper">Whitepaper</a>
                 </li>
                 <li class="nav-item">
-                    {% if path == "/" %}
-                        <a href="/whitepaper">WHITEPAPER</a>
-                    {% else %}
-                        <a target="_blank" href="https://drive.google.com/file/d/18GX3LdXNY5IyYbRtucb0xooE3St7xXdS/view">ROAD MAP</a>
-                    {% endif %}
-
+                    <a href="/team">Meet our team</a>
                 </li>
                 <li class="nav-item">
-                    <button class="how-to-buy center-items font-text-bold"><a target="_blank" href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x6b51231c43B1604815313801dB5E9E614914d6e4">WHERE TO BUY</a></button>
+                    <a href="https://drive.google.com/file/d/1tgtvtvQHxaDjoqSVO7N7lf8K9TK2E-_A/view?usp=sharing" target="_blank">Branding</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/jobs">Jobs</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/how-to-buy">How to buy</a>
                 </li>
             </ul>
         </div>
