--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -16,15 +16,15 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
-                        <h2 class="font-text header-main-sm">Join thousands of other investors to go to infinity &#38; beyond</h2>
+                        <h2 class="font-text header-main-sm">Join thousands of other investors traveling to infinity &#38; beyond</h2>
                     </div>
                 </div>
                 <br>
                 <br>
                 <div class="container-sm">
                     <div class="row-fluid center-items">
-                            <button class="how-to-buy font-text-bold main-page-buttons m-2"><a href="/how-to-buy">How to buy</a></button>
-                            <button class="how-to-buy font-text-bold main-page-buttons m-2" style="background-color: Transparent; border-color: #707070;"><a href="/whitepaper">Whitepaper</a></button>
+                            <button class="how-to-buy font-text-bold main-page-buttons m-2"><a target="_blank" href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x6b51231c43B1604815313801dB5E9E614914d6e4">Where to buy</a></button>
+                            <button class="how-to-buy font-text-bold main-page-buttons m-2"><a target="_blank" href="https://dex.guru/token/0x6b51231c43b1604815313801db5e9e614914d6e4-bsc">Live Chart</a></button>
                     </div>
                 </div>
             </div>
@@ -35,11 +35,6 @@
     <div class="position-ref">
         <div class="content">
             <div class="row">
-                <div class="col-sm-12 my-5">
-                    <button class="how-to-buy font-text-bold main-page-buttons m-2">
-                        <a target="_blank" href="https://dex.guru/token/0x6b51231c43b1604815313801db5e9e614914d6e4-bsc">Live Chart</a>
-                    </button>
-                </div>
                 <span style="display: none;">{{cached}}</span>
                 <div class="col-sm-3 my-3">
                     <h1 class="font-text-bold sub-header-main stats-font">${{ stats.current_price }} USD</h1>
