--- a/resources/templates/pages/whitepaper.html
+++ b/resources/templates/pages/whitepaper.html
@@ -94,11 +94,14 @@
         </div>
         <br>
         <br>
-<!--         <div class="content">
+        <div class="content">
             <div class="container-fluid">
-                <img src="/storage/static/images/Presale-detail-dots.png" class="center-items" width="100%">
+                <picture>
+                    <source media="(max-width: 960px)" srcset="/storage/static/images/Presale-detail-mobile.png">
+                    <img src="/storage/static/images/Presale-detail-desktop.png" class="center-items" width="90%">
+                </picture>
             </div>
-        </div> -->
+        </div>
         <div class="content">
             <div class="container-fluid">
                 <picture>
