--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -22,6 +22,16 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,600" rel="stylesheet" type="text/css">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQPQ8DE9SK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-XQPQ8DE9SK');
+    </script>
+
     {% block css %}{% endblock %}
 </head>
 
