--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -41,7 +41,7 @@
                     <h2 class="font-text sub-header-main-sm">Current Price</h2>
                 </div>
                 <div class="col-sm-3 my-3">
-                    <h1 class="font-text-bold sub-header-main stats-font {{ 'stats-green' if stats.price_24hr_change == 'up' else 'stats-red' }}">{{ stats.price_24hr_change }}%</h1>
+                    <h1 class="font-text-bold sub-header-main stats-font {{ 'stats-green' if stats.price_24hr_direction == 'up' else 'stats-red' }}">{{ stats.price_24hr_change }}%</h1>
                     <h2 class="font-text sub-header-main-sm">Price 24Hr Change</h2>
                 </div>
                 <div class="col-sm-3 my-3">
