added logo links for exchanges and listings

--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -255,6 +255,29 @@
     </div>
     <br>
     <br>
+    <br>
+    <div class="position-ref">
+        <div class="content">
+            <div class="row">
+                <div class="col-sm-3 my-3">
+                    <a target="_blank" href="https://coinmarketcap.com/currencies/safegalaxy/">{% include "/svg/coinmarketcap-white.svg" %}</a>
+                </div>
+                <div class="col-sm-3 my-3">
+                    <a target="_blank" href="https://bscscan.com/token/0x6b51231c43B1604815313801dB5E9E614914d6e4">{% include "/svg/bscscan-logo-light.svg" %}</a>
+                </div>
+                <div class="col-sm-3 my-3">
+                    <a target="_blank" href="https://www.cointiger.com/en-us/#/trade_center?coin=safegalaxy_usdt">{% include "/svg/cointiger.svg" %}</a>
+                </div>
+                <div class="col-sm-3 my-3">
+                    <a target="_blank" href="https://swap.swftcoin.com/swft-v3/swft-v3-pc/index.html">
+                        <img src="/storage/static/images/swft-blockchain.png" width="175px" height="50px" class="center-items">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
     <div class="position-ref">
         <div class="content container">
             <div class="row">
