added disclaimer to each page. filled in better for jobs page

--- a/resources/templates/pages/jobs.html
+++ b/resources/templates/pages/jobs.html
@@ -30,7 +30,7 @@
             {% endfor %}
         </div>
     </div>
+    <div class="bottom-gradient-main"></div>
 </div>
-<!-- <div class="bottom-gradient-main"></div> -->
 {% include "/components/footer.html" %}
 {% endblock %}
