--- a/resources/templates/components/footer.html
+++ b/resources/templates/components/footer.html
@@ -1,8 +1,46 @@
+<br>
+<br>
+<div class="position-ref">
+    <div class="content container">
+        <div class="row">
+
+            <div class="col-lg">
+                <div class="row padding-top-70">
+                    <div class="col-sm-12">
+                        <h1 class="font-text-bold header-main">Disclaimer</h1>
+                    </div>
+                </div>
+                <div class="row padding-15"><hr></div>
+                <div class="row">
+                    <div class="col-12">
+                        <button type="button" class="disclaimer-expand-btn" data-bs-toggle="collapse" data-bs-target="#collapse-faq-1" aria-expanded="false" aria-controls="collapse-faq-1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#fff" class="bi bi-chevron-compact-down" viewBox="0 0 16 16">
+                              <path fill-rule="evenodd" d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"/>
+                            </svg>
+                        </button>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="collapse padding-15" id="collapse-faq-1">
+                        <div class="card card-body faq-answer">
+                            The content shared on this website is for informational purposes only and, thus, should not be considered as financial advice.
+                            <br>
+                            <br>
+                            Trading crypto/digital assets is highly risky and highly volatile, and you should never invest more than you can afford to lose. Always seek professional advice before making any investment.
+                            <br>
+                            <br>
+                            The website visitor alone assume the sole responsibility of evaluating the merits and risks associated with the use of any information or other content on the website before making any decisions based on such information or other content. The website visitor indemnifies the website creators and all members of project creation and administration, from any responsibility regarding their financial decisions.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="position-ref bottom-gradient-image">
     <img src="/storage/static/images/Safegalaxy-background-pink-glow.png" height="400px" width="100%" class="center-items">
 </div>
-
 <div class="position-ref">
     <br>
     <br>
