added coingecko and pancake swap to exchange/listing section

--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -23,7 +23,7 @@
                 <br>
                 <div class="container-sm">
                     <div class="row-fluid center-items">
-                            <button class="how-to-buy font-text-bold main-page-buttons m-2"><a target="_blank" href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x6b51231c43B1604815313801dB5E9E614914d6e4">Where to buy</a></button>
+                            <button class="how-to-buy font-text-bold main-page-buttons m-2"><a target="_blank" href="https://v1exchange.pancakeswap.finance/#/swap?outputCurrency=0x6b51231c43b1604815313801db5e9e614914d6e4">Where to buy</a></button>
                             <button class="how-to-buy font-text-bold main-page-buttons m-2"><a target="_blank" href="https://dex.guru/token/0x6b51231c43b1604815313801db5e9e614914d6e4-bsc">Live Chart</a></button>
                     </div>
                 </div>
@@ -257,18 +257,30 @@
     <br>
     <br>
     <div class="position-ref">
-        <div class="content">
+        <div class="content container">
             <div class="row">
-                <div class="col-sm-3 my-3">
+                <div class="col-sm-4 my-3">
                     <a target="_blank" href="https://coinmarketcap.com/currencies/safegalaxy/">{% include "/svg/coinmarketcap-white.svg" %}</a>
                 </div>
-                <div class="col-sm-3 my-3">
+                <div class="col-sm-4 my-3">
+                    <a target="_blank" href="https://www.coingecko.com/en/coins/safegalaxy">
+                        <img src="/storage/static/images/CoinGecko-WhiteText.png" width="175px" height="50px" class="center-items">
+                    </a>
+                </div>
+                <div class="col-sm-4 my-3">
                     <a target="_blank" href="https://bscscan.com/token/0x6b51231c43B1604815313801dB5E9E614914d6e4">{% include "/svg/bscscan-logo-light.svg" %}</a>
                 </div>
-                <div class="col-sm-3 my-3">
+            </div>
+            <div class="row">
+                <div class="col-sm-4 my-3">
+                    <a target="_blank" href="https://v1exchange.pancakeswap.finance/#/swap?outputCurrency=0x6b51231c43b1604815313801db5e9e614914d6e4">
+                        <img src="/storage/static/images/pancakeswap-logo.png" width="175px" height="35wpx" class="center-items">
+                    </a>
+                </div>
+                <div class="col-sm-4 my-3">
                     <a target="_blank" href="https://www.cointiger.com/en-us/#/trade_center?coin=safegalaxy_usdt">{% include "/svg/cointiger.svg" %}</a>
                 </div>
-                <div class="col-sm-3 my-3">
+                <div class="col-sm-4 my-3">
                     <a target="_blank" href="https://swap.swftcoin.com/swft-v3/swft-v3-pc/index.html">
                         <img src="/storage/static/images/swft-blockchain.png" width="175px" height="50px" class="center-items">
                     </a>
